Cleaned up everything

--- a/.copier-answers.yaml
+++ b/.copier-answers.yaml
@@ -1,10 +1,10 @@
 ---
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 0.4.0
+_commit: 0.5.1
 _src_path: gh:radio-aktywne/template-meta
 accountname: radio-aktywne
 description: Devcontainer template 🐋
 reponame: template-devcontainer
 repourl: https://github.com/radio-aktywne/template-devcontainer
 templatename: devcontainer
-type: devcontainer
+type: generic
