--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,30 +9,28 @@ name: Test
   push:
     branches:
       - main
-    # Run only on changes to files relevant to tests
+    # Run only on changes to relevant files
     paths:
+      - ".github/workflows/test.yaml"
       - "src/**"
       - "tests/**"
       - "copier.yaml"
-      - "*.nix"
       - "flake.lock"
-      - "pytest.ini"
+      - "*.nix"
       - "Taskfile.dist.yaml"
-      - ".github/workflows/test.yaml"
   # Run also on pull requests to main branch
   pull_request:
     branches:
       - main
-    # Run only on changes to files relevant to tests
+    # Run only on changes to relevant files
     paths:
+      - ".github/workflows/test.yaml"
       - "src/**"
       - "tests/**"
       - "copier.yaml"
-      - "*.nix"
       - "flake.lock"
-      - "pytest.ini"
+      - "*.nix"
       - "Taskfile.dist.yaml"
-      - ".github/workflows/test.yaml"
 
 jobs:
   test:
@@ -40,7 +38,7 @@ jobs:
     # Pin version of Ubuntu to avoid breaking changes
     runs-on: ubuntu-22.04
     # Use reasonable timeout to avoid stuck workflows
-    timeout-minutes: 10
+    timeout-minutes: 30
     env:
       NIX_CACHE_DIR: /home/runner/.nixcache
       TRUNK_CACHE_DIR: /home/runner/.trunkcache
@@ -49,23 +47,23 @@ jobs:
       contents: read
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3.5.2
+        uses: actions/checkout@v4.1.0
       - name: Setup Nix cache
-        uses: actions/cache@v3.3.1
+        uses: actions/cache@v3.3.2
         id: cache-nix
         with:
           path: ${{ env.NIX_CACHE_DIR }}
           key: test-nix
       - name: Setup Trunk cache
-        uses: actions/cache@v3.3.1
+        uses: actions/cache@v3.3.2
         with:
           path: ${{ env.TRUNK_CACHE_DIR }}
           key: test-trunk
       - name: Install Nix
-        uses: cachix/install-nix-action@v21
+        uses: cachix/install-nix-action@v22
         with:
           github_access_token: ${{ github.token }}
-          install_url: https://releases.nixos.org/nix/nix-2.15.1/install
+          install_url: https://releases.nixos.org/nix/nix-2.18.0/install
       # See: https://github.com/cachix/install-nix-action/issues/56
       - name: Import Nix store cache
         if: steps.cache-nix.outputs.cache-hit == 'true'
