--- a/src/{% if docs %}docs{% endif %}/package.json
+++ b/src/{% if docs %}docs{% endif %}/package.json
@@ -10,20 +10,19 @@
     "posttest": "rm -rf .tmp/"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.1",
-    "@docusaurus/preset-classic": "2.4.1",
+    "@docusaurus/core": "2.4.3",
+    "@docusaurus/preset-classic": "2.4.3",
     "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
-    "npm-check-updates": "^16.10.15",
+    "clsx": "^2.0.0",
+    "npm-check-updates": "^16.14.4",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "start": "^5.1.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/eslint-plugin": "2.4.1",
-    "@docusaurus/module-type-aliases": "2.4.1",
-    "@tsconfig/docusaurus": "^2.0.0",
-    "typescript": "^5.1.6"
+    "@docusaurus/eslint-plugin": "2.4.3",
+    "@docusaurus/module-type-aliases": "2.4.3",
+    "@tsconfig/docusaurus": "^2.0.1",
+    "typescript": "^5.2.2"
   }
 }
