--- a/src/{% if true %}.github{% endif %}/workflows/image.yaml
+++ b/src/{% if true %}.github{% endif %}/workflows/image.yaml
@@ -9,28 +9,28 @@ name: Image
   push:
     branches:
       - main
-    # Run only on changes to files relevant to the image
+    # Run only on changes to relevant files
     paths:
-      - "src/**"
-      - "*.nix"
-      - "flake.lock"
-      - "package-lock.json"
-      - "package.json"
-      - "Taskfile.dist.yaml"
       - ".github/workflows/image.yaml"
+      - "src/**"
+      - "flake.lock"
+      - "*.nix"
+      - "package.json"
+      - "package-lock.json"
+      - "Taskfile.dist.yaml"
   # Run also on pull requests to main branch
   pull_request:
     branches:
       - main
-    # Run only on changes to files relevant to the image
+    # Run only on changes to relevant files
     paths:
-      - "src/**"
-      - "*.nix"
-      - "flake.lock"
-      - "package-lock.json"
-      - "package.json"
-      - "Taskfile.dist.yaml"
       - ".github/workflows/image.yaml"
+      - "src/**"
+      - "flake.lock"
+      - "*.nix"
+      - "package.json"
+      - "package-lock.json"
+      - "Taskfile.dist.yaml"
 
 jobs:
   image:
@@ -38,7 +38,7 @@ jobs:
     # Pin version of Ubuntu to avoid breaking changes
     runs-on: ubuntu-22.04
     # Use reasonable timeout to avoid stuck workflows
-    timeout-minutes: 10
+    timeout-minutes: 30
     env:
       NIX_CACHE_DIR: /home/runner/.nixcache
     permissions:
@@ -46,18 +46,18 @@ jobs:
       contents: read
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3.5.2
+        uses: actions/checkout@v4.1.0
       - name: Setup Nix cache
-        uses: actions/cache@v3.3.1
+        uses: actions/cache@v3.3.2
         id: cache-nix
         with:
           path: ${{ env.NIX_CACHE_DIR }}
           key: image-nix
       - name: Install Nix
-        uses: cachix/install-nix-action@v21
+        uses: cachix/install-nix-action@v22
         with:
           github_access_token: ${{ github.token }}
-          install_url: https://releases.nixos.org/nix/nix-2.15.1/install
+          install_url: https://releases.nixos.org/nix/nix-2.18.0/install
       # See: https://github.com/cachix/install-nix-action/issues/56
       - name: Import Nix store cache
         if: steps.cache-nix.outputs.cache-hit == 'true'
@@ -66,7 +66,7 @@ jobs:
           --import
           < ${{ env.NIX_CACHE_DIR }}/archive.nar
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2.7.0
+        uses: docker/setup-buildx-action@v3.0.0
       - name: Build Docker image
         run: >
           nix
