--- a/src/src/devcontainer.json
+++ b/src/src/devcontainer.json
@@ -6,6 +6,15 @@
     // Docker context to use, relative to this file
     "context": "image"
   },
+  // Volumes
+  "mounts": [
+    // Mount nix store (not shared)
+    "source=devcontainer-${devcontainerId}-nix,target=/nix,type=volume",
+    // Mount shell history (not shared)
+    "source=devcontainer-${devcontainerId}-shellhistory-state,target=/persist/shellhistory,type=volume",
+    // Mount trunk cache (shared)
+    "source=devcontainer-shared-trunk-cache,target=/cache/trunk,type=volume"
+  ],
   // Run arguments
   "runArgs": [
     // Use host network
@@ -13,15 +22,6 @@
   ],
   // Run a command when the container is created
   "onCreateCommand": "/hooks/create.sh",
-  // Volumes
-  "mounts": [
-    // Mount nix store (shared)
-    "source=devcontainer-${devcontainerId}-nix,target=/nix,type=volume",
-    // Mount shell history (not shared)
-    "source=devcontainer-${devcontainerId}-shellhistory,target=/shellhistory,type=volume",
-    // Mount trunk cache (shared)
-    "source=devcontainer-shared-trunk,target=/trunk,type=volume"
-  ],
   // Extra features to install to the container
   "features": {
     // Install Nix
