Changed args to bring the container closer to host

--- a/src/src/devcontainer.json
+++ b/src/src/devcontainer.json
@@ -24,8 +24,20 @@
   },
   // Run arguments
   "runArgs": [
+    // Use host PID namespace
+    "--pid=host",
+    // Use host UTS namespace
+    "--uts=host",
+    // Use host IPC
+    "--ipc=host",
     // Use host network
-    "--network=host"
+    "--network=host",
+    // Use host user namespace
+    "--userns=host",
+    // Use host cgroup namespace
+    "--cgroupns=host",
+    // Run with elevated privileges
+    "--privileged"
   ],
   // Run a command when the container is created
   "onCreateCommand": "/hooks/create.sh",
