--- a/src/src/devcontainer.json
+++ b/src/src/devcontainer.json
@@ -13,7 +13,7 @@
     // Mount nix store (not shared)
     "source=devcontainer-${devcontainerId}-nix,target=/nix,type=volume",
     // Mount shell history (not shared)
-    "source=devcontainer-${devcontainerId}-shellhistory-state,target=/persist/shellhistory,type=volume",
+    "source=devcontainer-${devcontainerId}-shellhistory-persist,target=/persist/shellhistory,type=volume",
     // Mount trunk cache (shared)
     "source=devcontainer-shared-trunk-cache,target=/cache/trunk,type=volume"
   ],
