--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,3 @@
----
 name: Test
 
 # Put 'on' in quotes to avoid YAML parsing error
@@ -11,26 +10,26 @@ name: Test
       - main
     # Run only on changes to relevant files
     paths:
-      - ".github/workflows/test.yaml"
-      - "src/**"
-      - "tests/**"
-      - "copier.yaml"
-      - "flake.lock"
+      - .github/workflows/test.yaml
+      - src/**
+      - tests/**
+      - copier.yaml
+      - flake.lock
       - "*.nix"
-      - "Taskfile.dist.yaml"
+      - Taskfile.dist.yaml
   # Run also on pull requests to main branch
   pull_request:
     branches:
       - main
     # Run only on changes to relevant files
     paths:
-      - ".github/workflows/test.yaml"
-      - "src/**"
-      - "tests/**"
-      - "copier.yaml"
-      - "flake.lock"
+      - .github/workflows/test.yaml
+      - src/**
+      - tests/**
+      - copier.yaml
+      - flake.lock
       - "*.nix"
-      - "Taskfile.dist.yaml"
+      - Taskfile.dist.yaml
 
 jobs:
   test:
@@ -40,14 +39,14 @@ jobs:
     # Use reasonable timeout to avoid stuck workflows
     timeout-minutes: 30
     env:
-      NIX_CACHE_DIR: /home/runner/.nixcache
-      TRUNK_CACHE_DIR: /home/runner/.trunkcache
+      NIX_CACHE_DIR: /home/runner/.nixcache/
+      TRUNK_CACHE_DIR: /home/runner/.trunkcache/
     permissions:
       # Needed to checkout code
       contents: read
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4.1.0
+        uses: actions/checkout@v4.1.1
       - name: Setup Nix cache
         uses: actions/cache@v3.3.2
         id: cache-nix
@@ -60,10 +59,10 @@ jobs:
           path: ${{ env.TRUNK_CACHE_DIR }}
           key: test-trunk
       - name: Install Nix
-        uses: cachix/install-nix-action@v22
+        uses: cachix/install-nix-action@v23
         with:
           github_access_token: ${{ github.token }}
-          install_url: https://releases.nixos.org/nix/nix-2.18.0/install
+          install_url: https://releases.nixos.org/nix/nix-2.18.1/install
       # See: https://github.com/cachix/install-nix-action/issues/56
       - name: Import Nix store cache
         if: steps.cache-nix.outputs.cache-hit == 'true'
@@ -77,7 +76,7 @@ jobs:
         run: >
           nix
           develop
-          .#test
+          ./#test
           --command
           --
           task
@@ -91,5 +90,5 @@ jobs:
           ${{ env.NIX_CACHE_DIR }}
           &&
           nix-store
-          --export $(find /nix/store -maxdepth 1 -name '*-*')
+          --export $(find /nix/store/ -maxdepth 1 -name '*-*')
           > ${{ env.NIX_CACHE_DIR }}/archive.nar
