--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,7 +1,6 @@
----
 version: 0.1
 cli:
-  version: 1.17.1
+  version: 1.17.2
 plugins:
   sources:
     - id: trunk
@@ -10,7 +9,7 @@ plugins:
 runtimes:
   enabled:
     # Needed for gitleaks, shfmt
-    - go@1.21.3
+    - go@1.21.4
     # Needed for markdownlint, prettier, svgo
     - node@20.9.0
     # Needed for black, ruff, yamllint
@@ -27,7 +26,6 @@ lint:
     # Nix formatting check (local)
     - name: nix-fmt-check
       files: [nix]
-      run_when: [ci, cli]
       commands:
         - output: pass_fail
           read_output_from: stderr
@@ -45,10 +43,9 @@ lint:
     # Nix flake check (local)
     - name: nix-flake-check
       files: [nix]
-      run_when: [ci, cli]
       commands:
         - output: pass_fail
-          target: .
+          target: ./
           read_output_from: stderr
           run: >-
             nix
@@ -64,7 +61,7 @@ lint:
     # GitHub Actions linting
     - actionlint@1.6.26
     # Python formatting
-    - black@23.9.1
+    - black@23.11.0
     # Check for whitespace errors
     - git-diff-check
     # Check for secrets in the code
@@ -77,17 +74,17 @@ lint:
     - nix-fmt-check@SYSTEM
     # Nix flake check
     - nix-flake-check@SYSTEM
-    # JSON, YAML, Markdown formatting
+    # JS, JSON, YAML, Markdown formatting
     - prettier@3.0.2
     # Python linting
-    - ruff@0.1.4
+    - ruff@0.1.5
     # Shell linting
     - shellcheck@0.9.0
     # Shell formatting
     - shfmt@3.7.0
     # SVG formatting
-    - svgo@3.0.2
+    - svgo@3.0.3
     # TOML formatting
     - taplo@0.8.1
     # YAML linting
-    - yamllint@1.32.0
+    - yamllint@1.33.0
