--- a/src/src/devcontainer.json
+++ b/src/src/devcontainer.json
@@ -1,49 +1,15 @@
 {
   // Build the base image
   "build": {
+    // Docker context to use, relative to this file
+    "context": "image/",
     // Dockerfile to use, relative to this file
     "dockerfile": "image/Dockerfile",
-    // Docker context to use, relative to this file
-    "context": "image/"
-  },
-  // Volumes
-  "mounts": [
-    // Mount secrets (shared)
-    "source=devcontainer-shared-secrets,target=/secrets/,type=volume",
-    // Mount nix store (not shared)
-    "source=devcontainer-${devcontainerId}-nix,target=/nix/,type=volume",
-    // Mount shell history (not shared)
-    "source=devcontainer-${devcontainerId}-shellhistory-persist,target=/persist/shellhistory/,type=volume",
-    // Mount trunk cache (shared)
-    "source=devcontainer-shared-trunk-cache,target=/cache/trunk/,type=volume"
-  ],
-  // Environment variables
-  "remoteEnv": {
-    // Set workspace path
-    "WORKSPACE": "${containerWorkspaceFolder}"
-  },
-  // Run a command when the container is created
-  "onCreateCommand": "/hooks/create.sh",
-  // Extra features to install to the container
-  "features": {
-    // Install Nix
-    "ghcr.io/devcontainers/features/nix:1.1.3": {
-      "version": "2.19.2",
-      // Multi-user mode is the best in this case
-      "multiUser": true,
-      // Enable experimental features
-      "extraNixConfig": "experimental-features = nix-command flakes"
-    },
-    // Install Direnv
-    "ghcr.io/devcontainers-contrib/features/gh-release:1.0.24": {
-      "repo": "direnv/direnv",
-      "binaryNames": "direnv",
-      "version": "2.33.0"
-    },
-    // Install Starship
-    "ghcr.io/devcontainers-contrib/features/starship:1.0.9": {
-      "version": "1.16.0"
-    }
+    // Build options
+    "options": [
+      // Use host network
+      "--network=host"
+    ]
   },
   // Tool-specific settings
   "customizations": {
@@ -51,19 +17,17 @@
     "vscode": {
       // Extensions to install
       "extensions": [
+        // Nix
+        "jnoortheen.nix-ide",
         // Direnv
         "mkhl.direnv",
         // Task
         "task.vscode-task",
         // Trunk
-        "Trunk.io",
-        // Nix
-        "jnoortheen.nix-ide"
+        "Trunk.io"
       ],
       // Settings to override
       "settings": {
-        // Don't forward ports automatically
-        "remote.autoForwardPorts": false,
         // Set Trunk as the default formatter
         "editor.defaultFormatter": "trunk.io",
         // Use LSP for Nix
@@ -78,11 +42,48 @@
             }
           }
         },
+        // Don't forward ports automatically
+        "remote.autoForwardPorts": false,
         // Use Nix IDE instead of Trunk for Nix files
         "[nix]": {
           "editor.defaultFormatter": "jnoortheen.nix-ide"
         }
       }
     }
+  },
+  // Extra features to install to the container
+  "features": {
+    // Install Nix
+    "ghcr.io/devcontainers/features/nix:1.2.0": {
+      // Enable experimental features
+      "extraNixConfig": "experimental-features = nix-command flakes",
+      "version": "2.20.5"
+    },
+    // Install Direnv
+    "ghcr.io/devcontainers-contrib/features/direnv:1.0.2": {
+      "version": "2.34.0"
+    },
+    // Install Starship
+    "ghcr.io/devcontainers-contrib/features/starship:1.0.9": {
+      "version": "1.17.1"
+    }
+  },
+  // Volumes
+  "mounts": [
+    // Mount secrets (shared)
+    "source=devcontainer-shared-secrets,target=/secrets/,type=volume",
+    // Mount nix store (not shared)
+    "source=devcontainer-${devcontainerId}-nix,target=/nix/,type=volume",
+    // Mount shell history (not shared)
+    "source=devcontainer-${devcontainerId}-shellhistory-persist,target=/persist/shellhistory/,type=volume",
+    // Mount trunk cache (shared)
+    "source=devcontainer-shared-trunk-cache,target=/cache/trunk/,type=volume"
+  ],
+  // Run a command when the container is created
+  "onCreateCommand": "/hooks/create.sh",
+  // Environment variables
+  "remoteEnv": {
+    // Set workspace path
+    "WORKSPACE": "${containerWorkspaceFolder}"
   }
 }
