--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,17 @@
 {
   "name": "devcontainer",
   "private": true,
-  "scripts": {
-    "dev": "devcontainer",
-    "build": "devcontainer build --workspace-folder src/ --config src/devcontainer.json",
-    "update": "ncu --peer --doctor --upgrade && npm i --no-audit --no-fund",
-    "test": "npm run -- build"
-  },
   "devDependencies": {
-    "@devcontainers/cli": "^0.74.0",
-    "npm-check-updates": "^17.1.14"
+    "@devcontainers/cli": "~0.80"
+  },
+  "devEngines": {
+    "packageManager": {
+      "name": "npm",
+      "version": "~10.9"
+    },
+    "runtime": {
+      "name": "node",
+      "version": "~22.20"
+    }
   }
 }
