--- a/src/{% if true %}.github{% endif %}/workflows/image.yaml
+++ b/src/{% if true %}.github{% endif %}/workflows/image.yaml
@@ -45,32 +45,37 @@ jobs:
       contents: read
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@v5.0.0
       - name: Setup Nix cache
-        uses: actions/cache@v4.2.1
+        uses: actions/cache@v4.3.0
         id: cache-nix
         with:
           path: ${{ env.NIX_CACHE_DIR }}
           key: image-nix
+      - name: Setup modules cache
+        uses: actions/cache@v4.3.0
+        with:
+          path: node_modules/
+          key: image-modules
       - name: Install Nix
-        uses: cachix/install-nix-action@v30
+        uses: cachix/install-nix-action@v31.8.4
         with:
           github_access_token: ${{ github.token }}
-          install_url: https://releases.nixos.org/nix/nix-2.26.2/install
+          install_url: https://releases.nixos.org/nix/nix-2.28.5/install
       # See: https://github.com/cachix/install-nix-action/issues/56
       - name: Import Nix store cache
         if: steps.cache-nix.outputs.cache-hit == 'true'
-        run: >
+        run: >-
           nix-store
           --import
           < ${{ env.NIX_CACHE_DIR }}/archive.nar
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.9.0
+        uses: docker/setup-buildx-action@v3.11.1
       - name: Build Docker image
-        run: >
+        run: >-
           nix
           develop
-          .#build
+          ./#build
           --command
           --
           task
@@ -82,9 +87,10 @@ jobs:
           'type=gha,mode=max,scope=${{ github.workflow }}'
           --output
           type=cacheonly
+      # See: https://github.com/cachix/install-nix-action/issues/56
       - name: Export Nix store cache
         if: "!cancelled()"
-        run: >
+        run: >-
           mkdir
           --parents
           ${{ env.NIX_CACHE_DIR }}
